[package]
name = "budahbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
iced = { version = "0.13.1", features = ["canvas", "image", "tokio"] }
image = { version = "0.24.4", features = ["jpeg"] }
rand = "0.8.5"
rfd = "0.15.4"
